--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "json-bigint": "^1.0.0",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "vant": "^2.9.0",
